# agent-forge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
agentforge/: __init__.py  agent.py
agentforge/providers/: __init__.py  openai_compatible.py
agentforge/tools/: __init__.py
examples/: quickstart.py
tests/: test_agent.py
