[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge-mini"
version = "0.1.0"
description = "A tiny, provider-agnostic framework for building tool-using AI agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kangbaxso" }]
keywords = ["ai", "agent", "llm", "tool-calling", "openai", "function-calling", "agents"]
dependencies = ["requests>=2.25"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/kangbaxso/agent-forge"
Issues = "https://github.com/kangbaxso/agent-forge/issues"

[tool.setuptools.packages.find]
include = ["agentforge*"]
